@@ -1,3 +1,8 @@
+2001-11-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* FilterParser.py: New file implementing the parser for TMDA
+	filter files.
+
 2001-11-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_VERSION): Begin 0.41 development.
